[tool.poetry]
name = "quant-lab"
version = "0.1.0"
description = "Algorithmic Trading Backtesting Platform - Monorepo"
authors = ["Quant Lab Contributors"]
readme = "README.md"
license = "MIT"

# Monorepo structure with path dependencies
[tool.poetry.dependencies]
python = "^3.11"
quant-lab-core = {path = "packages/core", develop = true}
quant-lab-api = {path = "packages/api", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
black = "^24.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# CODE QUALITY TOOLS
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/core/tests", "packages/api/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# =============================================================================
# USAGE NOTES
# =============================================================================
# 
# Install all dependencies:
#   poetry install
# 
# Run tests:
#   poetry run pytest
# 
# Format code:
#   poetry run black packages/
# 
# Type checking:
#   poetry run mypy packages/
# 
# Add dependency to core:
#   cd packages/core && poetry add package-name
# 
# Add dependency to api:
#   cd packages/api && poetry add package-name
